safari jumping content fix

--- a/src/components/table/TableTransactions.css
+++ b/src/components/table/TableTransactions.css
@@ -250,5 +250,10 @@ input:focus {
             width: 100%;
             cursor: pointer;
         }
+
+        .table-container {
+            min-height: 392px;
+            height: fit-content;
+        }
     }
 }
